[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
tokio.workspace = true

indexmap = { git = "https://github.com/bluss/indexmap", features = ["serde"] }
rustc-hash = "1.1.0"
serde_json = { version = "1.0.99" }
serde_repr = "0.1.12"
